# different_tasks

./: README.md  hangman.py  hangmannnn.py  input.txt  master.py  pyproject.toml
.github/workflows/: lint.yaml
